--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,5 +2,8 @@
 name = "bitfields"
 version = "0.1.0"
 authors = ["Johan Mickos <johan.mickos@gmail.com>"]
+description = "Helpers for storing sub-byte enums in primitive types."
+repository = "https://github.com/jarlopez/bitfields-rs"
+license = "WTFPL"
 
 [dependencies]
